<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SGCT Android Client</string>
    <string name="connect_descr">Connect with server IP/port</string>
    <string name="client_not_connected">Client is not connected</string>
    <string name="client_connected">Client is connected</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="unconnected">You are currently not connected to server</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="disconnect">Disconnect</string>
    <string name="autoconnect">Autoconnect on app startup</string>
</resources>
